Add a "Featured" list
Grid layout - row preferred
Only show if on the first page of a paginatation
and if allowed by the site configuration.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,6 +2,8 @@
   <article class="doc">
     <h1 class="page">{{ .Title | markdownify }}</h1>
     {{ .Content }}
+    {{ partial "featured" . }}
+    <h2 class="page"> {{ i18n "recent" }} </h2>
     {{ range .Paginator.Pages }}
       {{ partial "post-preview.html" . }}
     {{ end }}
