--- a/assets/css/preview.css
+++ b/assets/css/preview.css
@@ -6,3 +6,19 @@
   padding-top: 0.20em;
   padding-right: 0.83em;
 }
+
+.grid-container {
+  display: grid;
+  /* grid-auto-flow: column; */
+  gap: 0.4em;
+  grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+}
+
+.card {
+  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.3);
+  border-radius: 4px;
+  overflow: hidden;
+  padding: 8px;
+  margin: 16px 4px 0 0;
+  min-width: 0;
+}
