--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
     {{ partial "head.html" . }}
   </head>
   <body class="article">
+    {{ partial "body-scripts.html" . }}
     {{ partial "header.html" . }}
     <div class="body">
       {{ partial "nav.html" . }}
