--- a/layouts/partials/head-styles.html
+++ b/layouts/partials/head-styles.html
@@ -15,19 +15,19 @@
 {{ $pagination_list := resources.Get "css/pagination-list.css" }}
 {{ $header := resources.Get "css/header.css" }}
 {{ $footer := resources.Get "css/footer.css" }}
-{{ $fa := resources.Get "css/vendor/fontawesome/font-awesome.min.css"}}
+{{ $fa := resources.Get "plugins/fontawesome/font-awesome.min.css"}}
 {{ $highlightPath := "css/custom_highlight.css" }}
 {{ if .Site.Params.useHighlightjs }}
-{{ $highlightPath = default "github" .Site.Params.adocHighlightTheme | printf "%s.min.css" | path.Join
-"css/vendor/highlightjs/" }}
+{{ $highlightPath = default "github" .Site.Params.adocHighlightTheme | printf "%s.min.css" | path.Join "plugins/highlightjs/" }}
 {{ end }}
 {{ fmt.Warnf "Loading styles for syntax highlighting from asset %s" $highlightPath }}
-{{ $highlight := resources.Get $highlightPath | resources.Fingerprint }}
+{{ $highlight := resources.Get $highlightPath }}
 {{ $print := resources.Get "css/print.css" }}
 {{ $custom := resources.Get "css/custom.css" }}
-{{ $site := slice $vars $base $body $blogList $preview $nav $main $toolbar $breadcrumbs $page_versions $toc $doc
-$pagination
-$pagination_list $header $footer $fa $highlight $print $custom | resources.Concat "css/site.css" | resources.Minify |
-resources.Fingerprint }}
-<link rel="stylesheet" href="{{ $site.RelPermalink }}" {{ $site.Data.Integrity | printf "integrity=%q" | safeHTMLAttr
-    }}>
+{{ $r := slice $vars $base $body $blogList $preview $nav $main $toolbar $breadcrumbs $page_versions
+$toc $doc $pagination $pagination_list $header $footer $fa  $print $custom }}
+{{ with $highlight }}
+{{ $r = $r | append $highlight }}
+{{ end }}
+{{ $site := $r | resources.Concat "css/site.css" | resources.Minify | resources.Fingerprint }}
+<link rel="stylesheet" href="{{ $site.RelPermalink }}" {{ $site.Data.Integrity | printf "integrity=%q" | safeHTMLAttr }}>
