--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
     {{ .Content | safeHTML }}
   </div>
   <br />
-  {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections).ByDate.Reverse }}
+  {{ $paginator := .Paginate (where .Data.Pages "Type" "in" .Site.Params.mainSections).ByDate.Reverse }}
   {{ range $paginator.Pages }}
   {{ partial "post-preview.html" . }}
   {{ end }}
