--- a/layouts/partials/footer-scripts.html
+++ b/layouts/partials/footer-scripts.html
@@ -1,5 +1,5 @@
 <div id="copy-to-clipboard" style="display: none;">
-    <i class='bx bx-clipboard'></i>
+    <i class="fa-regular fa-clipboard"></i>
 </div>
 {{ $01_nav := resources.Get "js/01-nav.js" }}
 {{ $02_on_this_page := resources.Get "js/02-on-this-page.js" }}
@@ -11,7 +11,7 @@
 | resources.Concat "js/site.js" | resources.Minify | resources.Fingerprint }}
 <script src="{{ $site.RelPermalink }}" {{ $site.Data.Integrity | printf "integrity=%q" | safeHTMLAttr }}></script>
 {{ if .Site.Params.useHighlightjs }}
-{{ $highlight := resources.Get "js/vendor/highlight.min.js" | resources.Fingerprint }}
+{{ $highlight := resources.Get "plugins/highlightjs/highlight.min.js" | resources.Fingerprint }}
 <script src="{{ $highlight.RelPermalink }}" {{ $highlight.Data.Integrity | printf "integrity=%q" | safeHTMLAttr
     }}></script>
 <script>
